Add self signed certificate

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 VITE_AUTHENTICATION_AUTHORIZATION_API_URL=http://localhost:8000/api
+VITE_HTTPS=true
+VITE_HTTPS_KEY=pems/key.pem
+VITE_HTTPS_CERT=pems/cert.pem
